cdrkit (1.1.10) UNRELEASED; urgency=low

  [ Steve McIntyre ]
  * genisoimage: add support for sha256 and sha512 checksum generation
    when making jigdo files.
  * genisoimage: checksumming with lots of algorithms can be very
    time-consuming, so split it out into multiple threads if possible.

 -- Steve McIntyre <93sam@debian.org>  Thu, 14 May 2009 00:28:48 +0100

cdrkit (1.1.9) RELEASED; urgency=low

  [ Steve McIntyre ]
  * wodim: In -msinfo mode, only suggest dvd+rw-mediainfo in verbose mode.
    Thanks to Michael Karcher <debian@mkarcher.dialup.fu-berlin.de> for the
    patch.
  * genisoimage: undo a mistake in the directory permissions change in
    the last release. Fixes handling of deep directory structures.

 -- Steve McIntyre <93sam@debian.org>  Sun, 26 Oct 2008 15:43:54 -0700

cdrkit (1.1.8) RELEASED; urgency=low

  [ Steve McIntyre ]
  * genisoimage/joliet.c: Fix a potential memory corruption bug.
  * genisoimage/md5.c: Trivial cleanup
  * genisoimage/genisoimage.[c1]: Add command-line support for
    -jigdo-template-compress
  * genisoimage/sha1.h: Fix a type issue that broke sha1 support
    on 64-bit arches.
  * genisoimage/checksum.[ch]: Added test code; changed internal
    layout slightly to make for easier debug.
  * genisoimage: Applied patch from Roman Rakus <rrakus@redhat.com> to
    preserve directory permissions.
  * genisoimage: Add a patch from Ivan Shmakov. "-o -" will now write
    to stdout, as typical for command line programs. And we will try
    not to corrupt stdout by default if it's a terminal.
  * genisoimage/genisoimage.1: Add a mention of -chrp-boot.
  * genisoimage/mac_label.c: Fix an over-keen s/mkisofs/genisoimage.

 -- Steve McIntyre <93sam@debian.org>  Mon, 25 May 2008 21:22:26 +0100

cdrkit (1.1.7.1) RELEASED; urgency=low

  [ Steve McIntyre ]
  * Re-spin the 1.1.7 release with a few silly release process errors fixed.

 -- Steve McIntyre <93sam@debian.org>  Mon, 17 Mar 2008 21:25:56 +0000
